change css file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
             <label for="phone">Phone:</label>
             <input type="tel" id="phone" required><br>
+            <label for="adrress">Address:</label>
+            <input type="text" id="address" required><br>
 
             <label for="profilePic">Profile Picture:</label>
             <input type="file" id="profilePic" accept="image/*"><br>
